<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".bluetooth.DeviceListActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/PD" />

        <ListView
            android:id="@+id/list_pared_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/other_devices" />

        <ListView
            android:id="@+id/list_new_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/ensure_dicoverable"
            android:layout_width="match_parent"
            android:onClick="ensureDiscoverable"
            android:layout_height="wrap_content"
            android:text="@string/ensure_discoverable" />
        <Button
            android:id="@+id/button_scan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_scan" />
    </LinearLayout>
</layout>
