<layout>

    <android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <android.support.v7.widget.GridLayout
            android:id="@+id/grid"
            android:layout_width="0dp"
            app:layout_widthPercent="90%"
            app:layout_marginTopPercent="17%"
            app:layout_marginLeftPercent="5%"
            app:layout_marginStartPercent="5%"
            app:layout_marginEndPercent="5%"
            app:layout_marginRightPercent="5%"
            android:layout_height="0dp"
            android:keepScreenOn="true"
            app:columnCount="5"
            app:layout_aspectRatio="100%">


            <TextView
                android:id="@+id/cell00"
                android:clickable="true"
                android:gravity="center"
                android:onClick="cellClick"
                android:textSize="85sp"
                android:textStyle="bold"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_rowWeight="1" />

            <View
                android:layout_width="3dp"
                android:layout_height="0dp"
                android:background="@android:color/black"
                app:layout_gravity="fill_vertical" />

            <TextView
                android:id="@+id/cell01"
                android:clickable="true"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:onClick="cellClick"
                android:textSize="85sp"
                android:textStyle="bold"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_rowWeight="1" />

            <View
                android:layout_width="3dp"
                android:layout_height="0dp"
                android:background="@android:color/black"
                app:layout_gravity="fill_vertical" />

            <TextView
                android:id="@+id/cell02"
                android:clickable="true"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:onClick="cellClick"
                android:textSize="85sp"
                android:textStyle="bold"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_rowWeight="1" />

            <View
                android:layout_height="3dp"
                android:background="@android:color/black"
                app:layout_columnSpan="5"
                app:layout_gravity="fill_horizontal" />

            <TextView
                android:id="@+id/cell10"
                android:clickable="true"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:onClick="cellClick"
                android:textSize="85sp"
                android:textStyle="bold"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_rowWeight="1" />

            <View
                android:layout_width="3dp"
                android:layout_height="0dp"
                android:background="@android:color/black"
                app:layout_gravity="fill_vertical" />

            <TextView
                android:id="@+id/cell11"
                android:clickable="true"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:onClick="cellClick"
                android:textSize="85sp"
                android:textStyle="bold"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_rowWeight="1" />

            <View
                android:layout_width="3dp"
                android:layout_height="0dp"
                android:background="@android:color/black"
                app:layout_gravity="fill_vertical" />

            <TextView
                android:id="@+id/cell12"
                android:clickable="true"
                android:gravity="center"
                android:onClick="cellClick"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:textSize="85sp"
                android:textStyle="bold"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_rowWeight="1" />

            <View
                android:layout_height="3dp"
                android:background="@android:color/black"
                app:layout_columnSpan="5"
                app:layout_gravity="fill_horizontal" />

            <TextView
                android:id="@+id/cell20"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:clickable="true"
                android:gravity="center"
                android:onClick="cellClick"
                android:textSize="85sp"
                android:textStyle="bold"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_rowWeight="1" />

            <View
                android:layout_width="3dp"
                android:layout_height="0dp"
                android:background="@android:color/black"
                app:layout_gravity="fill_vertical" />

            <TextView
                android:id="@+id/cell21"
                android:clickable="true"
                android:gravity="center"
                android:onClick="cellClick"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:textSize="85sp"
                android:textStyle="bold"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_rowWeight="1" />

            <View
                android:layout_width="3dp"
                android:layout_height="0dp"
                android:background="@android:color/black"
                app:layout_gravity="fill_vertical" />

            <TextView
                android:id="@+id/cell22"
                android:clickable="true"
                android:gravity="center"
                android:onClick="cellClick"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:textSize="85sp"
                android:textStyle="bold"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_rowWeight="1" />

        </android.support.v7.widget.GridLayout>

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_above="@+id/info"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:background="@color/Info"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/you"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/opponent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/Score"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="24sp" />
        </LinearLayout>

        <com.example.igorklimov.tictactoe.res.LineView
            android:layout_width="match_parent"
            android:id="@+id/line_view"
            android:visibility="invisible"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/YouWin"
            android:visibility="gone"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#4775FF"
            android:textSize="75sp" />

        <ImageButton
            android:id="@+id/reset"
            android:visibility="gone"
            android:onClick="resetGame"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_above="@id/line"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/restart"
            android:text="@string/Reset" />

    </android.support.percent.PercentRelativeLayout>
</layout>